<resources>
    <string name="app_name">Mopick</string>
    <string name="nav_tagline">Fresh picks, ready to binge</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="language">Language</string>
    <string name="language_korean">한국어</string>
    <string name="language_english">English</string>
    <string name="language_chinese">中文</string>
    <string name="language_japanese">日本語</string>
    <string name="change_language">Change Language</string>

    <string name="now_showing">Now Showing</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top Rated</string>
    <string name="airing_today">Airing Today</string>
    <string name="on_the_air">On The Air</string>
    <string name="view_all">View All</string>

    <string name="now_showing_movies">Now Showing Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>

    <string name="airing_today_tv_shows">Airing Today TV Shows</string>
    <string name="on_the_air_tv_shows">On The Air TV Shows</string>
    <string name="popular_tv_shows">Popular TV Shows</string>
    <string name="top_rated_tv_shows">Top Rated TV Shows</string>

    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="source_code_on_github">Source code on GitHub</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="version">Version</string>

    <string name="read_more">Read More</string>
    <string name="movie_details">Release Date  \nRuntime  </string>
    <string name="movie_detail_release_date">Release Date</string>
    <string name="movie_detail_runtime">Runtime</string>
    <string name="trailers">Trailers</string>
    <string name="cast">Cast</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="biography">Biography</string>
    <string name="movie_cast">Movie Cast</string>
    <string name="tv_cast">TV Cast</string>
    <string name="tv_show_details">First Air Date  \nRuntime  \nStatus  \nOrigin Country  \nNetworks  </string>
    <string name="tv_show_detail_first_air_date">First Air Date</string>
    <string name="tv_show_detail_runtime">Runtime</string>
    <string name="tv_show_detail_status">Status</string>
    <string name="tv_show_detail_origin_country">Origin Country</string>
    <string name="tv_show_detail_networks">Networks</string>
    <string name="videos">Videos</string>
    <string name="similar_tv_shows">Similar TV Shows</string>
    <string name="watch_providers_available">Available on %1$s</string>
    <string name="watch_providers_not_available">Streaming availability info not provided</string>

    <string name="no_fav_movies">No Favourite Movies</string>
    <string name="no_fav_tv_shows">No Favourite TV Shows</string>

    <string name="search_movies_tv_shows_people">Search Movies, TV Shows, People</string>
    <string name="search_movies_tv_shows">Search Movies, TV Shows</string>
    <string name="search">Search</string>
    <string name="no_results_found">No results found</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="person">Person</string>

    <string name="no_network">No internet connection</string>
    <string name="error_loading_movies">Error loading movies</string>

    <string name="press_again_to_exit">Press again to exit</string>

    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="title_activity_cast_detail">CastDetailActivity</string>
    <string name="title_activity_view_all_movies">ViewAllMoviesActivity</string>
    <string name="title_activity_view_all_tvshows">ViewAllTVShowsActivity</string>
    <string name="title_activity_tvshow_detail">TVShowDetailActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="MOVIE_DB_API_KEY">957e5740ac3a4fbe6c5046369fa0f815</string>
    <string name="select_genre">Category</string>
    <string name="no_category_content">No content available for this category right now.</string>
    <string name="recommend">추천</string>
    <string name="pull_to_recommend">당겨서 추천받기</string>
    <string name="recommending">추천 중...</string>
    <string name="recommend_message_1">이보다 더 좋은건 없을 거에요!</string>
    <string name="recommend_message_2">밥먹으면서 보기 딱이죠?</string>
    <string name="recommend_message_3">이걸 아직 안보셨다구요?</string>
    <string name="recommend_message_4">기다리고 있었어요!</string>
    <string name="recommend_message_5">마음에 드실 거에요!</string>
    
    <!-- Brief Thoughts -->
    <string name="brief_thoughts">Brief Thoughts</string>
    <string name="new_thought">New Thought</string>
    <string name="edit_thought">Edit Thought</string>
    <string name="no_thoughts">No thoughts yet</string>
    <string name="content_title">Content Title</string>
    <string name="status">Status</string>
    <string name="status_watching">Watching</string>
    <string name="status_completed">Completed</string>
    <string name="status_watching_text">Still watching...</string>
    <string name="status_completed_text">Finished watching!</string>
    <string name="rating_text_format">A %d out of 5 star movie!</string>
    <string name="rating_question">How entertaining was it?</string>
    <string name="mood_question">How did you feel after watching?</string>
    <string name="recommend_question">Would you recommend this to others?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mood_happy">😊 Fun</string>
    <string name="mood_touched">😢 Touched</string>
    <string name="mood_excited">😍 Excited</string>
    <string name="mood_surprised">😮 Surprised</string>
    <string name="mood_funny">😂 Funny</string>
    <string name="mood_thoughtful">🤔 Thoughtful</string>
    <string name="mood_okay">😐 Okay</string>
    <string name="mood_boring">😴 Boring</string>
    <string name="mood_tense">😨 Tense</string>
    <string name="mood_calm">🌿 Calm</string>
    <string name="search_content">Search Content</string>
    <string name="go_to_thoughts">Go to Thoughts</string>
    <string name="view_my_thoughts">View My Thoughts</string>
    <string name="recommend_yes_message">A movie I want to recommend to others!</string>
    <string name="recommend_no_message">A movie I don\'t want to recommend...</string>
    <string name="recommend_yes_text">A movie I want to recommend to others!</string>
    <string name="recommend_no_text">A movie I don\'t want to recommend...</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_brief_thoughts">Brief Thoughts</string>
    <string name="title_activity_brief_thoughts_edit">Edit Thought</string>
</resources>

