<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMovieDetailBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.youngariy.mopick.activities.PersonDetailActivity"
    tools:showIn="@layout/activity_person_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_bio_header_person_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/biography"
            android:textColor="@color/colorMovieDetailTextPrimary"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_view_bio_person_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ellipsize="end"
            android:maxLines="7"
            android:textColor="@color/colorMovieDetailTextPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/text_view_read_more_person_detail"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:text="@string/read_more"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_view_movie_cast_person_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/movie_cast"
            android:textColor="@color/colorMovieDetailTextPrimary"
            android:textSize="20sp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_movie_cast_person_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false" />

        <TextView
            android:id="@+id/text_view_tv_cast_person_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_cast"
            android:textColor="@color/colorMovieDetailTextPrimary"
            android:textSize="20sp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_tv_cast_person_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>


