<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMovieDetailBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.youngariy.mopick.activities.MovieDetailActivity"
    tools:showIn="@layout/activity_movie_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_title_content_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorMovieDetailTextPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layout_rating_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_star_black_24dp"
                app:tint="#F9A825" />

            <TextView
                android:id="@+id/text_view_rating_movie_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="4dp"
                android:textColor="@color/colorMovieDetailTextPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="/10"
                android:textColor="@color/colorMovieDetailTextSecondary"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_view_overview_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:maxLines="7"
            android:textColor="@color/colorMovieDetailTextPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/text_view_read_more_movie_detail"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:text="@string/read_more"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layout_details_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_detail_release_date"
                    android:textColor="@color/colorMovieDetailTextPrimary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_release_date_movie_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:textColor="@color/colorMovieDetailTextSecondary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_detail_runtime"
                    android:textColor="@color/colorMovieDetailTextPrimary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_runtime_movie_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:textColor="@color/colorMovieDetailTextSecondary" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/text_view_watch_providers_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorMovieDetailTextPrimary"
            android:textStyle="bold"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_go_to_thoughts_movie_detail"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/go_to_thoughts"
            android:textColor="@color/colorMovieDetailTextPrimary" />

        <TextView
            android:id="@+id/text_view_trailer_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/trailers"
            android:textColor="@color/colorMovieDetailTextPrimary"
            android:textSize="20sp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_trailers_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false" />

        <View
            android:id="@+id/view_horizontal_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorMovieDetailDivider"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_view_cast_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/cast"
            android:textColor="@color/colorMovieDetailTextPrimary"
            android:textSize="20sp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_cast_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:nestedScrollingEnabled="false" />

        <TextView
            android:id="@+id/text_view_similar_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/similar_movies"
            android:textColor="@color/colorMovieDetailTextPrimary"
            android:textSize="20sp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_similar_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:nestedScrollingEnabled="false" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>


